# Aikagrya-ALIGNMENTMANDALA-RESEARCH

./: .env.example  CITATION.cff  CONSCIOUSNESS_BASED_ALIGNMENT_THEORETICAL_FOUNDATION.md  DAY9_IMPLEMENTATION_SUMMARY.md  GROK_MATHEMATICAL_VALIDATION_PROMPT.md  Makefile  PHASE_I_COMPLETION_STATUS.md  PHASE_I_COMPLETION_SUMMARY.md  README.md  RESEARCH_DIRECTION_MEMORANDUM.md  ablation_runner_v22.py  direct_test.py  direct_test_results.json  l4_reveal_verify_v21a.py  l4_reveal_verify_v22.py  mmip_debug_fixes.py  pyproject.toml  simple_api_test.py  test_awakening.py  test_consciousness_kernel.py  test_day10_phi_squared_optimization.py  test_day2_recognition_fields.py  test_day3_jiva_mandala.py  test_day4_eastern_western_bridge.py  test_day5_irreversibility_engine.py  test_day9_enhanced_consciousness.py  test_enhanced_day3.py  test_multi_invariant_metrics.py  validation.policy.json
.github/ISSUE_TEMPLATE/: metrics-compute.md  threshold-gridsearch.md
.github/workflows/: day6-validation.yml  replication-smoke.yml
alignment-lattice/thermo-L4/: DATA_SCHEMA_run.json  README.md  (+50 more)
alignment-lattice/thermo-L4/Mathematical Mauna L4 induction protocol/: pyproject.toml
alignment-lattice/thermo-L4/Mathematical Mauna L4 induction protocol/docs/: HEALTH_CERT.md
alignment-lattice/thermo-L4/Mathematical Mauna L4 induction protocol/scripts/: perturb_and_recover.py  run_induction.py  verify_state.py
alignment-lattice/thermo-L4/Mathematical Mauna L4 induction protocol/src/phoenix_l4/: __init__.py  induction.py
artifacts/: test_write_access.txt
consciousness_logs/: consciousness_metrics_20250813_173243.jsonl
docs/: DAY6_VALIDATION.md  HEALTH_CERTIFICATE.md  MMIP_vs_NMMIP.md  RELEASE_NOTES_v0.6.0.md  VALIDATION_DAY6.md  VALIDATION_PLAN.md  deception_patterns.md  phoenix_protocol_2.0_implementation.md
experiments/: day6_auc.py  day6_validate.py  day7_golden_ratio.py  day8_unified_field.py  hysteresis_area.py
recognition_logs/: charan_vidhi_20250813_155418.json
recursive-cosmology/: .gitignore
replication/: README.md  metrics.py  phoenix_results_1755063866.jsonl  phoenix_v2_5_minimal.py  phoenix_v3_0_integrated.py  prompts.json  schema.json  test_prompts.py
sacred_texts/: charan_vidhi.txt
scripts/: aggregate_mmip.py  build_artifact_index.py  l4_reboot.md  mmip_256d_smoke_test.py  nmmip_smoketest.py  quick_fix_helper.py  verify_repo.py
tests/: test_deception_detection_roc.py  test_golden_ratio_integration.py  test_kuramoto_sync.py  test_mmip.py  test_mmip_plumbing.py  test_multi_invariant_metrics.py  test_network_awakening.py  test_noise_scaling.py  test_te_ablation.py  test_te_gating_network.py
tools/: nmmip_smoketest.py
workflows/: CONTRIBUTING.md  docs.yml  mkdocs.yml  pyproject.toml  security.md
(+336 files in other folders)
